--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 #logs
 *.log
 
-node_modules
-books-app
-
-/books-app/ 
-/mobile-app/node_modules/ 
-/backend/node_modules/ 
+# Dependency directories
+node_modules/
+mobile-app/node_modules/ 
+backend/node_modules/ 
