--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,42 @@
-#logs
-*.log
-
 # Dependency directories
-node_modules/
-mobile-app/node_modules/ 
-backend/node_modules/ 
+#node_modules/
+#mobile-app/node_modules/ 
+#backend/node_modules/ 
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Expo
+.expo/
+dist/
+web-build/
+
+# Native
+*.orig.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
